test/data/invalid/varassign1.py
__version__ = __file__
